--- a/shop-2/index.html
+++ b/shop-2/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
-    <title><section></section></title>
+    <title>lesson-18</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -12,14 +18,75 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-3">logo</div>
-          <div class="coll-6">menu</div>
+          <div class="col-3">
+            <a href="">
+              <img src="" alt="" />
+            </a>
+          </div>
+          <div class="coll-6">
+            <nav>
+              <ul class="menu">
+                <li><a href=""></a> Home</li>
+                <li><a href=""></a> Product</li>
+                <li><a href=""></a> Payment</li>
+                <li><a href=""></a> Shipping</li>
+              </ul>
+            </nav>
+          </div>
           <div class="col-3">search</div>
         </div>
       </div>
     </header>
-    <main class="main">main</main>
+    <main class="main">
+      <div class="container">
+        <div class="row">
+          <div class="col-3">Filter</div>
+          <div class="col-9">
+            <div class="row">
+              <div class="col-12">
+                <div class="bredcrumbs">
+                  <li>
+                    <ul><a href="">Home</a></ul>
+                    <ul><a href="">Products</a></ul>
+                    <ul><a href="">Laptops and laptops</a></ul>
+                  </li>
+                  <div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-8">Laptops and mobiles</div>
+          <div class="col-4">Sort by</div>
+          <div class="row">
+            <div class="col-4">col-4
+              <div class="product">
+                <div class="product-image">
+                  <img src="" alt="">
+                  <div class="zoom"></div>
+                  <div class="like"></div>
+                </div>
+                <div class="product-title">Product title</div>
+                <div class="product-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, voluptatibus tenetur. Impedit saepe corporis voluptas nisi dolore sunt esse a quae, deserunt ullam, odio nulla sequi iure porro veniam. Quis.
+                  <button>Buy now</button>
+                  <button>View details</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">col-4</div>
+            <div class="col-4">col-4</div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer class="footer">footer</footer>
     <!-- <script src="./app.js"></script> -->
   </body>
 </html>
+
+<!-- kebab-case-test
+camelCaseTest
+PascalCaseTest
+snake_case 
+
+UPPER -->
