--- a/shop-2/index.html
+++ b/shop-2/index.html
@@ -67,10 +67,19 @@
                   <div class="like"></div>
                 </div>
                 <div class="product-title">Product title</div>
-                <div class="product-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, voluptatibus tenetur. Impedit saepe corporis voluptas nisi dolore sunt esse a quae, deserunt ullam, odio nulla sequi iure porro veniam. Quis.
-                  <button>Buy now</button>
-                  <button>View details</button>
+                <div class="product-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, voluptatibus tenetur. Impedit saepe corporis voluptas nisi dolore sunt esse a quae, deserunt ullam, odio nulla sequi iure porro veniam. Quis.
                 </div>
+                <div class="product-features">phone
+                  <span>Type:</span>
+                </div>
+                <div class="product-features">phone
+                  <span>Screen size:</span>
+                </div>
+                <div class="product-features">phone
+                  <span>Ram:</span>
+                </div>
+                <button>Buy now</button>
+                <button>View details</button>
               </div>
             </div>
             <div class="col-4">col-4</div>
